--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "reactstrap": "6.3.0",
     "mobx": "5.0.3",
     "mobx-react": "5.2.3",
-    "mobx-react-router" : "4.0.4"
+    "mobx-react-router" : "4.0.4",
+    "axios" : "0.18.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -21,6 +22,7 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/axios" :"0.14.0",
     "@types/jest": "^23.1.5",
     "@types/node": "^10.5.2",
     "@types/react": "^16.4.6",
